helidon/testData/config/properties/inspectionAndAnnotatorHighlighting.properties
# suppress inspection "WrongPropertyKeyValueDelimiter" for whole file
# suppress inspection "UnusedProperty" for whole file
security.secrets.<info descr="REGULAR_ITALIC_ATTRIBUTES">pro</info>.name=prod
# parametrized key: no duplicates
security.secrets.<info descr="REGULAR_ITALIC_ATTRIBUTES">test</info>.name=test

security.environment.server-time.day-of-month=<error descr="Cannot convert 'INVALID_VALUE' to java.lang.Long"><info descr="DEFAULT_NUMBER">INVALID_VALUE</info></error>
server.backlog=<error descr="Cannot convert 'INVALID_VALUE' to java.lang.Integer"><info descr="DEFAULT_NUMBER">INVALID_VALUE</info></error>
security.tracing.enabled=<error descr="Invalid value 'INVALID_VALUE', must be one of false|true"><info descr="DEFAULT_KEYWORD">INVALID_VALUE</info></error>
# do not highlight values with ${...}
my.integer=${<info descr="PROPERTIES.KEY"><highlight>server.backlog</highlight></info>}
security.secrets.<info descr="REGULAR_ITALIC_ATTRIBUTES">dev</info>.name=${<info descr="PROPERTIES.KEY"><highlight>placeholder.with.dots.but.its.not.fqn</highlight></info>}
# do not annotate empty placeholder range, otherwise closing '}' will get highlighted
server.sockets.host=${}

# boolean
server.tls.enabled=<info descr="DEFAULT_KEYWORD">false</info>
# enum
security.provider-policy.type=<error descr="Cannot resolve field 'INVALID_VALUE' in enum 'io.helidon.security.ProviderSelectionPolicyType'"><info descr="DEFAULT_STATIC_FIELD">INVALID_VALUE</info></error>

# unknown property
unknown.property=something

# deprecated POJO property
server.bind-address=localhost

# inspection suppressed
# suppress inspection "HelidonProperties"
suppressed.unresolved=true